--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
 	"version": "0.10.2",
 	"title": "Jinplace - A plugin for in place editing",
 	"description": "A jQuery plugin for in place editing on a page, primarly controlled by HTML markup.",
+	"directories": {
+		"doc": "doc",
+		"test": "tests"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/itinken/jinplace"
+	},
 	"keywords": [
 		"inline",
 		"edit",
@@ -17,12 +25,18 @@
 			"url": "http://www.opensource.org/licenses/mit-license.php"
 		}
 	],
+
 	"homepage": "https://bitbucket.org/itinken/jinplace",
-	"docs": "https://bitbucket.org/itinken/jinplace/wiki/Documentation",
-	"download": "https://bitbucket.org/itinken/jinplace/downloads",
-	"demo": "https://bitbucket.org/itinken/jinplace/wiki/demo.html",
 	"bugs": "https://bitbucket.org/itinken/jinplace/issues",
+
 	"dependencies": {
 		"jquery": ">=1.7"
+	},
+
+	"devDependencies": {
+		"grunt": "~0.4.1",
+		"grunt-contrib-qunit": "~0.2.2",
+		"grunt-closurecompiler": "~0.9.5",
+		"grunt-contrib-clean": "~0.5.0"
 	}
 }
