Depending on jquery-untouched for node package dependency because that seems to be more useful when it is a web package.  I have no idea though and would like to hear any opinions.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	"bugs": "https://bitbucket.org/itinken/jinplace/issues",
 
 	"dependencies": {
-		"jquery": ">=1.7"
+		"jquery-untouched": ">=1.7"
 	},
 
 	"devDependencies": {
