--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "jinplace",
-	"version": "0.11.1",
+	"version": "1.0.0-rc.1",
 	"description": "A jQuery plugin for in place editing on a page, primarly controlled by HTML markup.",
 	"main": "js/jinplace.js",
 	"bugs": "https://bitbucket.org/itinken/jinplace/issues",
