--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
 		"grunt-contrib-qunit": "~0.2.2",
 		"grunt-closurecompiler": "~0.9.5",
 		"grunt-contrib-clean": "~0.5.0"
+	},
+
+	"scripts": {
+		"test": "grunt qunit"
 	}
 }
