Make jinplace requireable in browserify

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	"files": [
 		"js/*"
 	],
-
+    "main": "js/jinplace.js",
 	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-qunit": "~0.2.2",
